fix: Fixed CardModal scrollbar height

--- a/client/src/components/CardModal/CardModal.module.scss
+++ b/client/src/components/CardModal/CardModal.module.scss
@@ -51,9 +51,15 @@
   .mainContainer {
     background: var(--backgroundColorTmpBackground);
     margin: 0;
-    padding: 0;
+    padding: 6px 0 0 0;
     height: 100%;
     width: 100%;
+  }
+
+  .flexContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   .moduleContainer {
@@ -67,7 +73,6 @@
     top: 0;
     z-index: 2;
     padding: 15px 15px 12px 15px;
-    margin-bottom: 6px;
   }
 
   .headerFirstLine {
